# webcam-virtual-background

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  Usage.md  cam
.devcontainer/: Dockerfile  devcontainer.json
backgrounds/: bg.ayuv  southpark.ayuv  spaceship.ayuv  tardis.ayuv
lib/: libavdevice.so.58  libavfilter.so.7  libavformat.so.58  libavutil.so.56  libswresample.so.3  libswscale.so.5
src/: blur_float.cpp  ffmpeg_compat.hpp  ffmpeg_headers.hpp  main.cpp  math.hpp  program.h  remuxing.cpp  snowflake.cpp  snowflake.h  tensorflow.hpp  transpose_conv_bias.cc
tools/: Makefile  ayuv_to_argb.cpp  rgb_to_ayuv.cpp  rgb_to_yuv.cpp
